# WikiMolGen

./: .editorconfig  .gitignore  .pre-commit-config.yaml  4-MeO-DiPT-3d-sticks.py  4-MeO-DiPT-3d-sticks.sdf  4-MeO-DiPT.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OUTPUT_LICENSE.md  README.md  SECURITY.md  packages.txt  pyproject.toml  requirements.txt  run_app.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy-site.yml  python-publish.yml  scorecards.yml  socket.yml  stale.yml
.streamlit/: config.toml
tests/: conftest.py
tests/web/rendering/: test_base.py
tests/web/session/: test_config.py
tests/web/template/: test_uniformity.py  test_utils.py
tests/web/ui/: test_icons.py
tests/web/wikipedia/: test_generator.py
tests/wikimolgen/: test_core.py
tests/wikimolgen/cli/: test_cli.py
tests/wikimolgen/configs/: test_loader.py
tests/wikimolgen/sources/: test_dailymed.py  test_pubchem_experimental.py  test_pubchem_props.py  test_pubchem_substance.py  test_wikidata.py  test_wikidata_extended.py  test_wikipedia_infobox.py
web/: __init__.py  app.py  data_sources.py  drugbox_generator.py  rendering.py  session_state.py  template_utils.py  theme.py  ui_components.py  wikipedia_boxes.py
web/rendering/: atom_colors.py  base.py
web/session/: __init__.py  config.py  config_manager.py  state.py
web/template/: theme.py  themes_css.py  utils.py  wiki_theme.css
web/ui/: components.py  icons.py  protein_web_component.py
web/wikipedia/: boxes.py  generator.py
wikimolgen/: README.md  __init__.py  cli.py  core.py  examples.py  optimization.py  predefined_templates.py  pyproject.toml  templates.py  wikimol2d.py  wikimol3d.py
wikimolgen/cli/: cli.py  protein_cli.py
wikimolgen/configs/: __init__.py  loader.py
wikimolgen/examples/: examples.py
wikimolgen/examples/examples/3D/: caffeine_manual.sdf  chloroquine_colors.sdf  levothyroxine_colors.sdf  penicillin_colors.sdf
wikimolgen/examples/examples/batch/: aspirin_3d.sdf  dopamine_3d.sdf  glucose_3d.sdf  ibuprofen_3d.sdf  serotonin_3d.sdf  vitamin_c_3d.sdf
wikimolgen/rendering/: __init__.py  amine_canonicalization.py  optimization.py  protein.py  utils.py  wikimol2d.py  wikimol3d.py
wikimolgen/sources/: __init__.py  _client.py  dailymed.py  pubchem_experimental.py  pubchem_props.py  pubchem_substance.py  unichem.py  wikidata.py  wikipedia_infobox.py
