[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WikiMolGen"
version = "0.1.0"

description = "Generate 2D/3D molecular structure visualizations from PubChem, SMILES, or compound names"
readme = "README.md"

requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Wolren", email = "wolrenn@outlook.com" }
]

keywords = [
    "chemistry",
    "cheminformatics",
    "molecules",
    "molecular-structure",
    "visualization",
    "rdkit",
    "pymol",
    "2d-structure",
    "3d-structure",
    "svg",
    "pubchem",
    "smiles",
    "wikipedia",
    "scientific-visualization",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "rdkit>=2023.3.1",
    "biotite>=1.5.0",
    "nglview>=3.0.0",
    "pubchempy>=1.0.4",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
pymol = ["pymol-open-source>=3.0.0"]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Wolren/WikiMolGen"
Documentation = "https://github.com/Wolren/WikiMolGen#readme"
Repository = "https://github.com/Wolren/WikiMolGen"
Issues = "https://github.com/Wolren/WikiMolGen/issues"

[project.scripts]
wikimolgen = "wikimolgen.cli.cli:main"

[tool.setuptools]
packages = [
    "wikimolgen",
    "wikimolgen.rendering",
    "wikimolgen.cli",
    "wikimolgen.configs",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

# ---------------------------------------------------------------------------
# Deferred fixes — tracked, not yet actioned.  Remove each entry once fixed.
# ---------------------------------------------------------------------------
ignore = [
    # ── protein.py ──────────────────────────────────────────────────────────
    # UP042 — StrEnum migration (SecondaryStructureType, ColorScheme)
    "UP042",
    # UP045 — Optional[X] → X | None
    "UP045",
    # UP006 — List/Tuple/Dict → built-in generics
    "UP006",
    # F841  — unused local variable `tmpdir_path` (line 223)
    "F841",
    # E722  — bare except (lines 257, 265)
    "E722",
    # F541  — f-string without placeholders (lines 319, 321)
    "F541",
    # W292  — no newline at end of file (line 616)
    "W292",
    # E501  — lines > 100 chars (wikimol2d.py, wikimol3d.py)
    "E501",

    # ── web/wikipedia/generator.py ──────────────────────────────────────────
    # W291  — trailing whitespace in multi-line Wikipedia template strings
    "W291",

    # ── wikimolgen/examples/examples.py ────────────────────────────────────
    # N802  — function name `example_4_MeO_DiPT` not lowercase (chemical name)
    "N802",

    # ── wikimolgen/rendering/ (amine_canonicalization, optimization, protein)
    # I001  — unsorted/unformatted import blocks
    "I001",
    # UP035 — deprecated typing imports (Optional/List/Tuple/Dict from typing)
    "UP035",
    # F401  — unused imports (AllChem in amine_canonicalization, List in optimization)
    "F401",
]
