[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WikiMolGen"
version = "1.0.0"

description = "Generate 2D/3D molecular structure visualizations from PubChem, SMILES, or compound names"
readme = "README.md"

requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }

authors = [
    { name = "Wolren", email = "wolrenn@outlook.com" }
]

keywords = [
    "chemistry",
    "cheminformatics",
    "molecules",
    "molecular-structure",
    "visualization",
    "rdkit",
    "pymol",
    "2d-structure",
    "3d-structure",
    "svg",
    "pubchem",
    "smiles",
    "wikipedia",
    "scientific-visualization",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "rdkit>=2025.3.0",
    "biotite>=1.6.0",
    "pubchempy>=1.0.5",
    "numpy>=1.26.0",
    "Pillow>=11.0.0",
    "requests>=2.32.0",
    "streamlit>=1.50.0",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
pymol = ["pymol-open-source>=3.2.0a0"]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Wolren/WikiMolGen"
Documentation = "https://github.com/Wolren/WikiMolGen#readme"
Repository = "https://github.com/Wolren/WikiMolGen"
Issues = "https://github.com/Wolren/WikiMolGen/issues"

[project.scripts]
wikimolgen = "wikimolgen.cli.cli:main"

[tool.setuptools]
packages = [
    "wikimolgen", "wikimolgen.cli", "wikimolgen.configs",
    "wikimolgen.examples", "wikimolgen.rendering", "wikimolgen.sources",
    "web", "web.rendering", "web.session", "web.template", "web.ui",
    "web.wikipedia",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "ARG", "RUF100", "T20"]
ignore = [
    "E402", "E501", "E731",
    "N803",
    "ARG001", "ARG002",
    "B904", "SIM105", "SIM117",
    "F841",
    "I001",
    "RUF100",
    "T201",
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["ARG001", "T20", "F841"]
