[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WikiMolGen"
version = "1.0.0"
description = "Unified molecular structure generator for 2D and 3D visualizations. Originally built for Wikipedia"
readme = "README.md"
requires-python = "3.12"
license = {text = "MIT"}
authors = [
    {name = "Wolren", email = "wolrenn@outlook.com"}
]
keywords = ["chemistry", "cheminformatics", "molecules", "visualization", "rdkit", "pymol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "rdkit>=2023.3.1",
    "pubchempy>=1.0.4",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
pymol = ["pymol-open-source>=3.0.0"]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/wikimolgen"
Documentation = "https://github.com/yourusername/wikimolgen#readme"
Repository = "https://github.com/yourusername/wikimolgen"
Issues = "https://github.com/yourusername/wikimolgen/issues"

[project.scripts]
wikimolgen = "wikimolgen.cli:main"

[tool.setuptools]
packages = ["wikimolgen"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP"]
